@@ -127,6 +127,7 @@
 #  %tagline    = tagline
 #  %timeonline = time online
 #  %f_name     = filename being transfered
+#  %currentdir = current dir user is in, full chrooted path
 #  %u_pid      = PID of user
 #  %dnspeed    = for SPEEDDN only, downloadspeed of user
 #  %dnpercent  = for SPEEDDN only, percent of bw used
@@ -135,14 +136,16 @@
 #  %idletime   = for SPEEDID only, time idling
 #
 # For USER
-#  %u_name   = username
-#  %g_name   = groupname
-#  %fper     = percentage of file transferred
-#  %speed    = speed up/dn of user
-#  %per      = percentage of bw used up/dn
-#  %tagline  = tagline
-#  %since    = time online
-#  %filename = file being transferred
+#  %u_name     = username
+#  %g_name     = groupname
+#  %fper       = percentage of file transferred
+#  %speed      = speed up/dn of user
+#  %per        = percentage of bw used up/dn
+#  %tagline    = tagline
+#  %since      = time online
+#  %filename   = file being transferred
+#  %currentdir = current dir user is in, full chrooted path
+#  %u_pid      = PID of user
 # For TOTUPDN
 #  %type     = Uploaders: or Leechers:
 #  %count    = amount of transfers up/dn
